--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="155dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/str_pistaNombre"
+        android:hint="@string/str_pistaNombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         android:autofillHints="" />
