--- a/app/src/main/res/layout/activity_preguntas.xml
+++ b/app/src/main/res/layout/activity_preguntas.xml
@@ -20,7 +20,9 @@
         android:id="@+id/tv_pregunta"
         android:layout_width="wrap_content"
         android:layout_height="106dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +33,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="345dp"
         android:layout_height="166dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,36 +43,35 @@
             android:id="@+id/rbResp1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton"
-            android:onClick="onRadioBtnClik"/>
+            android:onClick="onRadioBtnClik"
+            android:text="RadioButton" />
 
         <RadioButton
             android:id="@+id/rbResp2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="RadioButton"
-            android:onClick="onRadioBtnClik"/>
+            android:onClick="onRadioBtnClik"
+            android:text="RadioButton" />
 
         <RadioButton
             android:id="@+id/rbResp3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="RadioButton"
-            android:onClick="onRadioBtnClik"/>
+            android:onClick="onRadioBtnClik"
+            android:text="RadioButton" />
     </RadioGroup>
 
     <Button
         android:id="@+id/btnComprobar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="79dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="60dp"
         android:text="@string/str_btComprobar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
