--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="155dp"
         android:ems="10"
+        android:hint="@string/str_pistaNombre"
         android:inputType="textPersonName"
-        android:text="@string/str_pistaNombre"
+        android:text="Probando"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
