--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="fill_parent"
-        android:layout_height="47dp"
+        android:layout_width="413dp"
+        android:layout_height="76dp"
         android:text="@string/str_princip"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:textSize="20sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,7 +32,6 @@
         android:ems="10"
         android:hint="@string/str_pistaNombre"
         android:inputType="textPersonName"
-        android:text="Probando"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
