--- a/app/src/main/res/layout/activity_preguntas.xml
+++ b/app/src/main/res/layout/activity_preguntas.xml
@@ -10,7 +10,6 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="15dp"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/Theme.ProyectoPIE"
@@ -18,13 +17,14 @@
 
     <TextView
         android:id="@+id/tv_pregunta"
-        android:layout_width="wrap_content"
-        android:layout_height="106dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="0dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
+        android:autoSizeTextType="uniform"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
@@ -33,7 +33,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="345dp"
         android:layout_height="166dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onRadioBtnClik"
+            android:textSize="20sp"
             android:text="RadioButton" />
 
         <RadioButton
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:onClick="onRadioBtnClik"
+            android:textSize="20sp"
             android:text="RadioButton" />
 
         <RadioButton
@@ -60,11 +62,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:onClick="onRadioBtnClik"
+            android:textSize="20sp"
             android:text="RadioButton" />
     </RadioGroup>
 
     <Button
         android:id="@+id/btnComprobar"
+        style="@style/Theme.ProyectoPIE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -73,6 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
