--- a/app/src/main/res/layout/activity_puntuacion.xml
+++ b/app/src/main/res/layout/activity_puntuacion.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PuntuacionActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="15dp"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/Theme.ProyectoPIE"
@@ -17,8 +17,11 @@
 
     <TextView
         android:id="@+id/resulTxt"
-        android:layout_width="235dp"
-        android:layout_height="312dp"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:autoSizeTextType="uniform"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
