--- a/app/src/main/res/layout/activity_puntuacion.xml
+++ b/app/src/main/res/layout/activity_puntuacion.xml
@@ -27,4 +27,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
+
+    <Button
+        android:id="@+id/btn_fin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/str_fin"
+        app:layout_constraintEnd_toEndOf="@+id/resulTxt"
+        app:layout_constraintStart_toStartOf="@+id/resulTxt"
+        app:layout_constraintTop_toBottomOf="@+id/resulTxt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
