--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,14 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="413dp"
+        android:layout_width="0dp"
         android:layout_height="76dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/str_princip"
         android:textAlignment="center"
         android:textColor="#673AB7"
-        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
